<resources>
    <string name="app_name">Material</string>
    <string name="backup">Backup</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="this_is_menu">This is menu</string>
    <string name="select">Select</string>
    <string name="friends">Friends</string>
    <string name="email">Email</string>
    <string name="task">Task</string>
    <string name="user_account">xxxxx@163.com</string>
    <string name="mail">XXXX</string>
</resources>
