<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_call"
            android:icon="@mipmap/select"
            android:title="@string/select" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@mipmap/menu"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_location"
            android:icon="@mipmap/del_text"
            android:title="@string/delete" />
        <item
            android:id="@+id/nav_mail"
            android:icon="@mipmap/select"
            android:title="@string/email" />
        <item
            android:id="@+id/nav_task"
            android:icon="@mipmap/del_text"
            android:title="@string/task" />
    </group>
</menu>